<resources>
    <string name="app_name">Apk_Final_Tecinfo</string>
    <string name="title_activity_act__principal">Act_Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--Menu drawer-->
    <string name="estabelecimento">Cadastrar Estabelecimento</string>
    <string name="perfil">Perfil</string>
    <string name="txt_act_login_cadastro">Não sou cadastrado</string>
    <string name="btn_act_login_btn_entrar">ENTRAR</string>
    <string name="radio_m">M</string>
    <string name="radio_f">F</string>
    <string name="cad_nome">Nome</string>
    <string name="cad_sobrenome">Sobrenome</string>
    <string name="cad_data">Data</string>
    <string name="cad_sexo">Sexo</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_proximo">Próximo</string>
    <string name="cad_usuario">Nome do Usuário</string>
    <string name="cad_senha">Senha</string>
    <string name="cad_confsenha">Confirmar Senha</string>
    <string name="btn_concluir">Concluir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_principal_txt_restaurantes">Restaurantes</string>
    <string name="fragment_principal_txt_piscina">Piscinas</string>
    <string name="fragment_principal_txt_lach">Lanchonetes</string>
    <string name="fragment_principal_txt_parques">Parques</string>
    <string name="fragment_principal_txt_pizzarias">Pizzarias</string>
    <string name="fragment_principal_txt_outros">Outros</string>
    <string name="title_activity_act__mapa">Map</string>


    <!--Textos da Avaliação-->
    <string name="nome_pessoa_1">Edson Nascimento</string>
    <string name="comentario_pessoa_1">"sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distin</string>

    <string name="nome_pessoa_2">Gilmar</string>
    <string name="comentario_pessoa_2">"On the other hand, we denounce with righteous indignationand dislike men who are so beguiled and dem</string>

    <string name="nome_pessoa_3">Lucas</string>
    <string name="comentario_pessoa_3">"On the other hand, we denounce with righteous indignationand dislike men who are so beguiled and demoralized by the charms of pleasure of the moment,so bl</string>

    <string name="nome_pessoa_4">Gabriely</string>
    <string name="comentario_pessoa_4">"On the other hand, wous indignationand dislike men who are so beguiled and demoralized by the charms of pleasure of the moment,so bl</string>

    <string name="nome_pessoa_5">Dalton Vieira</string>
    <string name="comentario_pessoa_5">Eu quero dormi</string>

</resources>
